# simple-firmware-nrf-connect

./: .gitignore  CMakeLists.txt  Kconfig  README.md  setup_build.sh  setup_build_salus.sh
board_config/customer/boards/arm/nrf52840dk_nrf52840/: nrf52840dk_nrf52840-pinctrl.dtsi  nrf52840dk_nrf52840.dts  nrf52840dk_nrf52840_defconfig
board_config/salus/boards/arm/nrf52840dk_nrf52840/: Kconfig  nrf52840dk_nrf52840.dts
config/: prj.conf  prj_salus.conf
dts/bindings/: seeed,lora-e5.yaml  ti,tmp102.yaml
releases/: release.sh
releases/v1.0.0/: customer_firmware_v1.0.0.hex
releases/v1.0.1/: customer_firmware_v1.0.1.hex
releases/v1.0.3/: salus_firmware_v1.0.3.hex
src/: main.c
src/algorithms/madgwick/: madgwick_ahrs.c  madgwick_ahrs.h
src/algorithms/ppg/: heart_rate_analyzer.c  heart_rate_analyzer.h  spo2_analyzer.c  spo2_analyzer.h
src/algorithms/ppg/include/: custom_filter.h  heart_rate.h  ppg_data.h  sin_cos_table.h  spo2.h  sqi_cal.h
src/app/ble_manager/: ble_manager.c  ble_manager.h
src/app/configuration_manager/: configuration_manager.c  configuration_manager.h
src/app/network_manager/: network_manager.c  network_manager.h  protocol.h
src/app/power_manager/: power_manager.c  power_manager.h
src/app/sensor_manager/: sensor_manager.c  sensor_manager.h
src/app/system_manager/: system_manager.c  system_manager.h
src/app/user_interface_manager/: user_interface_manager_button.c  user_interface_manager_button.h  user_interface_manager_led.c  user_interface_manager_led.h  user_interface_manager_oled.c  user_interface_manager_oled.h
src/ble/: ble_peripheral.c  ble_peripheral.h
src/common/: base_board_defs.h  base_include.h  base_type.h
src/hw/bsp/: bsp_afe.c  bsp_afe.h  bsp_bm.c  bsp_bm.h  bsp_i2c.c  bsp_i2c.h  bsp_i2c_mul.c  bsp_i2c_mul.h  bsp_imu.c  bsp_imu.h  bsp_io.c  bsp_io.h  bsp_led.c  bsp_led.h  bsp_nvs.c  bsp_nvs.h  bsp_oled.c  bsp_oled.h  bsp_power.c  bsp_power.h  bsp_pwm.c  bsp_pwm.h  bsp_spi.c  bsp_spi.h  bsp_temp.c  bsp_temp.h  bsp_timer.c  bsp_timer.h  bsp_wireless_charger.c  bsp_wireless_charger.h
src/hw/components/driver/as6221/: as6221.c  as6221.h
src/hw/components/driver/bmi323/: bmi323_defs.h  bmi3_defs.h
src/hw/components/driver/bmi323/common/: common.c  common.h
src/hw/components/driver/max17048/: max17048.c  max17048.h
src/hw/components/driver/max86176/: max86176.c  max86176.h  max86176_regs.h
src/hw/components/driver/one_button/: one_button.c  one_button.h
src/hw/components/driver/pca9540/: pca9540.c  pca9540.h
src/hw/components/driver/ssd1306/: ssd1306.c  ssd1306.h
src/hw/components/driver/stts22h/: stts22h.c  stts22h.h
src/hw/components/driver/stwlc38/: README.md  nvm_data.h  stwlc38.c  stwlc38.h
src/hw/components/driver/stwlc38/STSW-WLC38FWEPP/: STEVAL-WLC38RX_config_1F46_EPP.memh  STEVAL-WLC38RX_nvmpatch_1437.memh
src/middlewares/font/: font.c  font.h
src/middlewares/media/: make_header.py  run.sh
src/middlewares/media/header/: icon.h
